fixed alignment of checkboxes

--- a/african-marketplace/src/App.css
+++ b/african-marketplace/src/App.css
@@ -92,8 +92,8 @@ p, a {
 }
 
 input[type=checkbox] {
-  zoom: 2.4;
-  margin: 3px;
+  zoom: 2;
+  margin-right: 2%;
 }
 
 
@@ -161,4 +161,17 @@ li a, li a:hover {
 #root > div > nav > div > ul {
   padding: 0;
   margin: 0.5% 0;
+}
+
+.picky__placeholder {
+  color: red;
+  display: none;
+}
+
+.option {
+  display: flex;
+}
+
+.option #text {
+  color: red;
 }
